[package]
name = "mrf_processor_rust"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
num_cpus = "1.16.0"
walkdir = "2.5.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
flate2 = "1.0"

dashmap = "5.5.3"

reqwest = { version = "0.11", features = ["json"] }
aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true