[package]
name = "mrf_processor_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
num_cpus = "1.16.0"
walkdir = "2.5.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
flate2 = "1.0"

dashmap = "5.5.3"
async-channel = "2.2.0"

# Use rustls to avoid system OpenSSL
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"
aws-credential-types = "1.1.7"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true